adding release for testing

--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -21,3 +21,13 @@ jobs:
           repository: 'openstack/openstack-helm-infra'
           ref: 'master'
           path: 'openstack-infra'
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.0.0-rc.1
+        with:
+          charts_dir: 'openstack-helm'
+        env:
+          CR_TOKEN: "${{ secrets.CR_TOKEN }}"
