--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -14,6 +14,7 @@ jobs:
         with:
           repository: 'openstack/openstack-helm'
           ref: 'master'
+          path: 'openstack-helm'
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
