adding release for testing

--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -18,5 +18,4 @@ jobs:
       - name: Show repo output
         run: ls -lah
       - name: Execute Chart Releaser
-        using: 'docker'
-        image: 'helmpack/chart-releaser:latest'
+        uses: 'docker://helmpack/chart-releaser:latest'
