--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -9,6 +9,12 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
       - name: Checkout Openstack-Helm @ Master
         uses: actions/checkout@v2
         with:
@@ -17,5 +23,7 @@ jobs:
           path: 'charts'
       - name: Show repo output
         run: ls -lah
-      - name: Execute Chart Releaser
-        uses: 'docker://quay.io/helmpack/chart-releaser:latest'
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@master
+        env:
+          CR_TOKEN: '${{ secrets.CR_TOKEN }}'
