--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -15,6 +15,8 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      - name: Remove openstack-helm git references
+        run: rm -rf charts/.git
       - name: Checkout Openstack-Helm @ Master
         uses: actions/checkout@v2
         with:
