bugfix: reference to old folder

--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -28,4 +28,4 @@ jobs:
       - name: Show repo output
         run: ls -lah
       - name: Package each of the repos charts
-        run: cd charts && make package all
+        run: cd openstack-helm-infra && make package all
