--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -27,5 +27,7 @@ jobs:
         run: find . -type f -name 'requirements.yaml' -exec sed -i 's/http\:\/\/localhost\:8879\/charts/file\:\/\/\.\.\/helm-toolkit\//g' {} \;
       - name: Show repo output
         run: ls -lah
+      - name: Remove prometheus-kube-state-metrics as it is invalid
+        run: rm -rf openstack-helm-infra/prometheus-kube-state-metrics
       - name: Package each of the repos charts
         run: cd openstack-helm-infra && make package all
