--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -36,8 +36,8 @@ jobs:
         with:
           repository: 'openstack/openstack-helm'
           ref: 'afd68753c720094e61fee24f001a2d826f1929ae'
-          path: 'openstack-helm-infra'
-      - name: Remove openstack-helm-infra git references
+          path: 'openstack-helm'
+      - name: Remove openstack-helm git references
         run: rm -rf openstack-helm/.git
       - name: Replace all instances of "http://localhost:8879/charts" with "file://../../openstack-helm-infra/helm-toolkit/"
         run: find ./openstack-helm -type f -name 'requirements.yaml' -exec sed -i 's/http\:\/\/localhost\:8879\/charts/file\:\/\/\.\.\/\.\.\/openstack-helm-infra\/helm-toolkit\//g' {} \;
