--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -29,5 +29,33 @@ jobs:
         run: ls -lah
       - name: Remove prometheus-kube-state-metrics as it is invalid
         run: rm -rf openstack-helm-infra/prometheus-kube-state-metrics
-      - name: Push helm-toolkit chart first
-        run: cd openstack-helm-infra && make package helm-toolkit
+        #- name: Push helm-toolkit chart first
+        #run: cd openstack-helm-infra && make package helm-toolkit
+      - name: Package each of the Openstack-Helm-Infra charts
+        run: cd openstack-helm-infra && make package all
+      ###
+      # Push all the artifacts
+      ###
+      - name: Push Openstack-Helm-Infra charts to registry
+        uses: goodsmileduck/helm-push-action@v2
+        env:
+          SOURCE_DIR: 'openstack-helm-infra'
+          CHART_FOLDER: 'openstack'
+          FORCE: 'True'
+          CHARTMUSEUM_URL: 'https://registry.thecore.net.au/chartrepo'
+          CHARTMUSEUM_USER: ${{ secrets.HARBOR_ROBOT }}
+          CHARTMUSEUM_PASSWORD: ${{ secrets.HARBOR_ROBOT_TOKEN }}
+      - name: Checkout Openstack-Helm @ Specific Version
+        uses: actions/checkout@v2
+        with:
+          repository: 'openstack/openstack-helm'
+          ref: 'afd68753c720094e61fee24f001a2d826f1929ae'
+          path: 'openstack-helm'
+      - name: Remove openstack-helm git references
+        run: rm -rf openstack-helm/.git
+      - name: Replace all instances of "http://localhost:8879/charts" with "file://../../openstack-helm-infra/helm-toolkit/"
+        run: find ./openstack-helm -type f -name 'requirements.yaml' -exec sed -i 's/http\:\/\/localhost\:8879\/charts/file\:\/\/\.\.\/\.\.\/openstack-helm-infra\/helm-toolkit\//g' {} \;
+      - name: Show repo output
+        run: ls -lah openstack-helm
+      - name: Package each of the Openstack-Helm charts
+        run: cd openstack-helm && make package all
