bugfix: install push plugin

--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -29,6 +29,8 @@ jobs:
         run: ls -lah
       - name: Remove prometheus-kube-state-metrics as it is invalid
         run: rm -rf openstack-helm-infra/prometheus-kube-state-metrics
+      - name: Install Helm Push Plugin
+        run: helm plugin install https://github.com/chartmuseum/helm-push.git
       - name: Push helm-toolkit chart first
         run: cd openstack-helm-infra && make package helm-toolkit && helm push --username=${{ secrets.HARBOR_ROBOT }} --password=${{ secrets.HARBOR_ROBOT_TOKEN }} *.tgz https://registry.thecore.net.au/chartrepo/openstack
       ###
