bugfix: authorization for harbor

--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -32,7 +32,10 @@ jobs:
       - name: Install Helm Push Plugin
         run: helm plugin install https://github.com/chartmuseum/helm-push.git
       - name: Push helm-toolkit chart first
-        run: cd openstack-helm-infra && make package helm-toolkit && helm push --username=${{ secrets.HARBOR_ROBOT }} --password=${{ secrets.HARBOR_ROBOT_TOKEN }} *.tgz https://registry.thecore.net.au/chartrepo/openstack
+        run: cd openstack-helm-infra && make package helm-toolkit && helm push *.tgz https://registry.thecore.net.au/chartrepo/openstack
+        env:
+          HELM_REPO_USERNAME: ${{ secrets.HARBOR_ROBOT }}
+          HELM_REPO_PASSWORD: ${{ secrets.HARBOR_ROBOT_TOKEN }}
       ###
       # Push Helm-Toolkit the registry first
       ###
