--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -37,9 +37,13 @@ jobs:
           HELM_REPO_USERNAME: ${{ secrets.HARBOR_ROBOT }}
           HELM_REPO_PASSWORD: ${{ secrets.HARBOR_ROBOT_TOKEN }}
       - name: Package each of the Openstack-Helm-Infra charts
-        run: cd openstack-helm-infra && make package all
-      - name: Push Openstack-Helm-Infra Charts to Registry
-        run: cd openstack-helm-infra && make package helm-toolkit && helm push --force *.tgz https://registry.thecore.net.au/chartrepo/openstack
+        run: cd openstack-helm-infra && make package all && helm push --force *.tgz https://registry.thecore.net.au/chartrepo/openstack
+        env:
+          HELM_REPO_USERNAME: ${{ secrets.HARBOR_ROBOT }}
+          HELM_REPO_PASSWORD: ${{ secrets.HARBOR_ROBOT_TOKEN }}
+      ###
+      # Openstack-Helm-Charts
+      ###
       - name: Checkout Openstack-Helm @ Specific Version
         uses: actions/checkout@v2
         with:
