--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'openstack/openstack-helm-infra'
-          ref: '7351586a7d4700e27dceea3b2004d535a48c6ae6'
+          ref: 'master'
           path: 'openstack-helm-infra'
       - name: Remove openstack-helm-infra git references
         run: rm -rf openstack-helm-infra/.git
